# macos-alert

./: .gitignore  CMakeLists.txt  README.md  README_CN.md
src/: Alert.h  Alert.mm  INI.h  main.cpp
